MB-5311 Remove potential deadlock from TAP connection map

Now that tap connections may run in all worker threads we may
have a deadlock if we try to release the reference with the
tap connection map locked. Delay the release call until it's
executed by the dispatcher.

Change-Id: Ie90173185acc5009ab19f946f96d23c3e591b916
Reviewed-on: http://review.couchbase.org/15976
Reviewed-by: Chiyoung Seo <chiyoung.seo@gmail.com>
Tested-by: Chiyoung Seo <chiyoung.seo@gmail.com>