tapconnmap.hh
@@ -250,7 +250,7 @@ private:
 
     TapConnection *findByName_UNLOCKED(const std::string &name);
     void getExpiredConnections_UNLOCKED(std::list<TapConnection*> &deadClients,
-                                        std::list<TapConnection*> &regClients);
+                                        std::list<const void*> &regClients);
 
     void removeTapCursors_UNLOCKED(TapProducer *tp);
 
